// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render with many props assigned 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchorSpan anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <h2
      className="secondary test-class headingTextWithLinkIconOffset Heading"
    >
      <div
        className="hashLink"
      >
        <a
          data-testid="Hash Link"
          href="#test"
          id="test-link"
        >
          <span
            className="ScreenReaderOnly"
          >
            Scroll Link for 
            Test
          </span>
          <svg
            className="icon"
          />
        </a>
        <span>
          Test
        </span>
      </div>
    </h2>
  </div>
</div>
`;

exports[`Heading should render with required props 1`] = `
<div
  className="headingContainer"
>
  <span
    className="anchorSpan anchorMargin"
    id="test"
  />
  <div
    className="hashLinkContainer"
  >
    <h2
      className="secondary headingTextWithLinkIconOffset Heading"
    >
      <div
        className="hashLink"
      >
        <a
          data-testid="Hash Link"
          href="#test"
          id="test-link"
        >
          <span
            className="ScreenReaderOnly"
          >
            Scroll Link for 
            Test
          </span>
          <svg
            className="icon"
          />
        </a>
        <span>
          Test
        </span>
      </div>
    </h2>
  </div>
</div>
`;
